force-app/main/default/objects/FN_ProjectLine__c/FN_ProjectLine__c.object-meta.xml
<CustomObject>
    <description>a line item of a project</description>
    <label>Project Line</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>