force-app/main/default/objects/FN_ProjectLine__c/fields/FiftySize__c.field-meta.xml
<CustomField>
    <fullName>FiftySize__c</fullName>
    <description>The fifty percent size projected value.  This is the best case scenario.</description>
    <inlineHelpText>The fifty percent size projected value. This is the best case scenario.</inlineHelpText>
    <label>50 Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>