force-app/main/default/objects/FN_ProjectLine__c/fields/ItemOrder__c.field-meta.xml
<CustomField>
    <fullName>ItemOrder__c</fullName>
    <description>The field used to order the items</description>
    <inlineHelpText>The a numeric value used to order the line items.</inlineHelpText>
    <label>Item Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>