force-app/main/default/objects/FN_ProjectLine__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>The related project</description>
    <inlineHelpText>The related project</inlineHelpText>
    <label>Project</label>
    <referenceTo>FN_Project__c</referenceTo>
    <relationshipLabel>Project Lines</relationshipLabel>
    <relationshipName>ProjectLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>