force-app/main/default/objects/FN_ProjectLine__c/fields/WorkItemName__c.field-meta.xml
<CustomField>
    <fullName>WorkItemName__c</fullName>
    <description>The related work item&#39;s Name</description>
    <formula>WorkItem__r.Name</formula>
    <inlineHelpText>The related work item&#39;s Name</inlineHelpText>
    <label>Work Item Name</label>
    <type>Text</type>
</CustomField>