force-app/main/default/objects/FN_ProjectLine__c/recordTypes/ProjectLineItem.recordType-meta.xml
<RecordType>
    <fullName>ProjectLineItem</fullName>
    <active>true</active>
    <description>A line item on an FN Project</description>
    <label>Project Line Item</label>
</RecordType>